# PyGBM6700E

./: .gitignore  README.md
lab_1/: README.md  pyproject.toml  requirements.txt
lab_1/docs/: index.html  search.js  spinetools.html
lab_1/docs/spinetools/: data.html  io.html  render.html  solver.html  structures.html
lab_1/spinetools/: __init__.py  data.py  io.py  render.py  solver.py  structures.py
lab_2/: README.md  pyproject.toml  requirements.txt
lab_2/hearttools/: __init__.py  geometry.py  io.py  metrics.py  plot.py  solver.py  structures.py  utils.py
