[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hearttools"
version = "1.0.0"
authors = [
  { name="Victor NOGUES", email="victor.nogues@polymtl.ca" },
]
description = "Helper lib for the GBM6700E lab 2"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/vtrno/PyGBM6700E"